--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "admin-lte-sass": "^2.3.2",
+    "datatables": "^1.10.13",
+    "font-awesome-sass": "^4.7.0",
+    "ionicons": "^3.0.0",
+    "sweetalert": "^1.1.3"
   }
 }
