--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "datatables": "^1.10.13",
     "font-awesome-sass": "^4.7.0",
     "ionicons": "^3.0.0",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "vue-bootstrap-slider": "^1.1.0"
   }
 }
